@@ -1,7 +1,7 @@
 package com.pham.basis.evcharging.service;
 
 
-import com.pham.basis.evcharging.dto.request.LocationRequest;
+import com.pham.basis.evcharging.dto.request.StationFilterRequest;
 import com.pham.basis.evcharging.dto.response.ChargingStationResponse;
 import com.pham.basis.evcharging.model.ChargerPillar;
 import com.pham.basis.evcharging.model.ChargingStation;
@@ -13,6 +13,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
 @RequiredArgsConstructor
@@ -22,31 +23,134 @@ public class ChargingStationServiceImpl implements ChargingStationService {
 
     @Override
     @Transactional(readOnly = true)
-    public List<ChargingStationResponse> findNearbyStations(LocationRequest request) {
+    public List<ChargingStationResponse> findNearbyStations(StationFilterRequest request) {
         Double reqLat = request.getLatitude();
         Double reqLon = request.getLongitude();
-        Double radius = request.getRadius();
+        Double radius = request.getRadius() != null ? request.getRadius() : 5.0;
 
-        if (reqLat == null || reqLon == null) {
-            return List.of();
-        }
+        if (reqLat == null || reqLon == null) return List.of();
+
+        // Normalize requested connector types (upper-case) for case-insensitive compare
+        Set<String> wantedConnectors = Optional.ofNullable(request.getConnectors())
+                .orElse(Collections.emptyList())
+                .stream()
+                .filter(Objects::nonNull)
+                .map(String::trim)
+                .map(String::toUpperCase)
+                .collect(Collectors.toSet());
+
+        Double minPower = request.getMinPower();
+        Double maxPower = request.getMaxPower();
+        Double minPrice = request.getMinPrice();
+        Double maxPrice = request.getMaxPrice();
+        boolean filterPillarCriteria = !wantedConnectors.isEmpty() || minPower != null || maxPower != null || minPrice != null || maxPrice != null;
 
         List<ChargingStation> stations = stationRepository.findAll();
 
-        return stations.stream()
-                .filter(s->hasAvailablePillar(s))
+        // compute distance for each station (transient field) and filter by radius
+        Stream<ChargingStation> stream = stations.stream()
                 .peek(s -> {
-                    if (s.getDistance() == null
-                            && s.getLatitude() != null
-                            && s.getLongitude() != null) {
-                        Double dist = calculateDistance(reqLat, reqLon, s.getLatitude(), s.getLongitude());
-                        s.setDistance(dist);
-                    }
+                    Double d = calculateDistance(reqLat, reqLon, s.getLatitude(), s.getLongitude());
+                    s.setDistance(d);
                 })
-                .filter(s -> s.getDistance() != null && s.getDistance() <= radius)
-                .sorted(Comparator.comparing(ChargingStation::getDistance))
+                .filter(s -> s.getDistance() != null && s.getDistance() <= radius);
+
+        // apply availableOnly (station-level)
+        if (Boolean.TRUE.equals(request.getAvailableOnly())) {
+            stream = stream.filter(this::hasAvailablePillar);
+        }
+
+        // apply pillar-level filters: connectors / power / price
+        if (filterPillarCriteria) {
+            stream = stream.filter(s -> stationHasPillarMatchingFilters(s, wantedConnectors, minPower, maxPower, minPrice, maxPrice));
+        }
+
+        // sorting
+        Comparator<ChargingStation> comparator = Comparator.comparing(ChargingStation::getDistance, Comparator.nullsLast(Double::compareTo));
+        String sort = request.getSort() != null ? request.getSort().trim().toLowerCase() : "distance";
+        if ("price".equals(sort)) {
+            // sort by cheapest price in station (ascending)
+            comparator = Comparator.comparing(
+                    s -> getCheapestPriceAcrossPillars(s),
+                    Comparator.nullsLast(Double::compareTo)
+            );
+        } else if ("power".equals(sort)) {
+            // sort by max power across pillars (descending)
+            comparator = Comparator.comparing(
+                    (ChargingStation s) -> getMaxPowerAcrossPillars(s),
+                    Comparator.nullsLast(Double::compareTo)
+            ).reversed();
+        }
+
+        List<ChargingStationResponse> results = stream
+                .sorted(comparator)
                 .map(this::convertToResponse)
                 .collect(Collectors.toList());
+
+        // pagination
+        int page = request.getPage() != null ? request.getPage() : 0;
+        int size = request.getSize() != null ? request.getSize() : 10;
+        int start = page * size;
+        if (start >= results.size()) return List.of();
+        int end = Math.min(start + size, results.size());
+        return results.subList(start, end);
+    }
+
+    /** Helper: station has at least one pillar that matches pillar-level criteria:
+     *  - connector types (if wantedConnectors non-empty)
+     *  - power within min/max (if provided)
+     *  - price per kwh within min/max (if provided)
+     */
+    private boolean stationHasPillarMatchingFilters(ChargingStation station,
+                                                    Set<String> wantedConnectors,
+                                                    Double minPower, Double maxPower,
+                                                    Double minPrice, Double maxPrice) {
+        List<ChargerPillar> pillars = Optional.ofNullable(station.getPillars()).orElse(Collections.emptyList());
+        for (ChargerPillar p : pillars) {
+            if (p == null) continue;
+
+            // power check
+            if (minPower != null && (p.getPower() == null || p.getPower() < minPower)) continue;
+            if (maxPower != null && (p.getPower() == null || p.getPower() > maxPower)) continue;
+
+            // price check
+            if (minPrice != null && (p.getPricePerKwh() == null || p.getPricePerKwh() < minPrice)) continue;
+            if (maxPrice != null && (p.getPricePerKwh() == null || p.getPricePerKwh() > maxPrice)) continue;
+
+            // connector check: if wantedConnectors empty -> accept
+            if (wantedConnectors.isEmpty()) {
+                return true; // this pillar satisfies power/price (connectors not required)
+            }
+
+            List<Connector> connectors = Optional.ofNullable(p.getConnectors()).orElse(Collections.emptyList());
+            for (Connector c : connectors) {
+                if (c == null || c.getType() == null) continue;
+                String t = c.getType().trim().toUpperCase();
+                if (wantedConnectors.contains(t)) {
+                    return true;
+                }
+            }
+            // this pillar didn't match connector requirement -> try next pillar
+        }
+        return false;
+    }
+
+    /** Helper: get cheapest price across station's pillars (nullable) */
+    private Double getCheapestPriceAcrossPillars(ChargingStation s) {
+        return Optional.ofNullable(s.getPillars()).orElse(Collections.emptyList()).stream()
+                .map(ChargerPillar::getPricePerKwh)
+                .filter(Objects::nonNull)
+                .min(Double::compareTo)
+                .orElse(null);
+    }
+
+    /** Helper: get max power across station's pillars (nullable) */
+    private Double getMaxPowerAcrossPillars(ChargingStation s) {
+        return Optional.ofNullable(s.getPillars()).orElse(Collections.emptyList()).stream()
+                .map(ChargerPillar::getPower)
+                .filter(Objects::nonNull)
+                .max(Double::compareTo)
+                .orElse(null);
     }
 
     //Kiểm tra có ít nhất 1 pillar available
@@ -116,7 +220,7 @@ public class ChargingStationServiceImpl implements ChargingStationService {
                 station.getAddress(),
                 station.getLatitude(),
                 station.getLongitude(),
-                station.getDistance(), // giữ nguyên nếu DB đã tính
+                station.getDistance(),
                 station.getStatus(),
                 powerStr,
                 availableStr,
